--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,11 @@
 .contact-form-div{
   margin-top: 30px;
 }
+
+.form-edit{
+  background-color: rgb(187, 218, 241);
+}
+
+.btn {
+  margin-right: 3px;
+}
